# sketch-01

./: CMakeLists.txt  Makefile
dungeons/: L01.sdf  L01.txt  L02.sdf  L03.sdf  W.txt  road.sdf
headers/: collision.h  dungeon.h  effects.h  gamestate.h  network.h  setup.h  sprite.h  system.h
img/: 01-tiles.aseprite  01.aseprite  02.aseprite  c_s.aseprite  p.aseprite  part-01.aseprite  particles.aseprite  pond.aseprite  q.aseprite  s.aseprite  stick.aseprite  wave.aseprite
linbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  main
sources/: collision.cpp  dungeon.cpp  effects.cpp  gamestate.cpp  main.cpp  network.cpp  sprite.cpp  system.cpp
winbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
